<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/purple_200">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        app:checkedChip="@id/today_chip"
        app:selectionRequired="true"
        android:layout_marginStart="@dimen/margin">

        <com.google.android.material.chip.Chip
            android:id="@+id/today_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/today"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/yesterday_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/yesterday"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/before_yesterday_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/before_yesterday"/>
    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_weight="10"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1" />

</LinearLayout>