<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_example1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_1"
        app:layout_constraintBottom_toTopOf="@id/text_view_example2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_example2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_2"
        app:layout_constraintBottom_toBottomOf="@id/text_view_example1"
        app:layout_constraintBottom_toTopOf="@id/text_view_example3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_example3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_3"
        app:layout_constraintBottom_toBottomOf="@id/text_view_example2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/vertical_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="text_view_example1,text_view_example2, text_view_example3" />

    <TextView
        android:id="@+id/right_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/right_text"
        app:layout_constraintStart_toEndOf="@id/vertical_barrier"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintCircle="@id/right_text_view"
        app:layout_constraintCircleRadius="75dp"
        app:layout_constraintCircleAngle="135"
        android:rotation="45"
        android:text="@string/button"
        />
    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintCircle="@id/right_text_view"
        app:layout_constraintCircleRadius="75dp"
        app:layout_constraintCircleAngle="175"
        android:rotation="65"
        android:text="@string/button"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/horizontal_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="text_view_example3,text_view_example2, text_view_example1,
         right_text_view, button_1, button_2" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/horizontal_barrier"
        app:layout_constraintStart_toStartOf="@id/vertical_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/teal_200">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/pink"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/picture"
                    app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"
                    />
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bla_bla"/>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/ic_menu_picture"
            android:backgroundTint="@color/white"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|right"
            />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:layout_gravity="bottom"
            app:fabCradleMargin="@dimen/margin"
            app:fabCradleRoundedCornerRadius="100dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/ic_menu_picture"
            app:layout_anchor="@id/bottom_app_bar"
            app:layout_anchorGravity="bottom|center"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>